2006-12-20  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Contacts/UIxContactFoldersView.m ([UIxContactFoldersView
	-checkRightsAction]): new method similar to the one with the same
	name in UIxCalMainView.m.

	* UI/Common/UIxAclEditor.m ([UIxAclEditor -saveAclsAction]): added
	code to handle the publishing of freebusy information.

2006-12-19  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Scheduler/UIxCalMainView.m ([UIxCalMainView
	-checkRightsAction]): new action method that returns a
	comma-separated list of boolean values matching the right of the
	current user to "view" (as a permission) each foreign calendar
	stored in his preferences.

	* SoObjects/SOGo/SOGoObject.m ([SOGoObject -setOwner:newOwner]):
	new method that sets a customOwner, which can be returned with
	ownerInContext it set.

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder
	-fetchFields:_fieldsfromFolder:_folderfrom:_startDateto:_endDatecomponent:_component]): no longer set the owner of elements here.

2006-12-15  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoUserFolder.m: same as for SOGoContactFolders
	below, but for the Contacts and Calendar collections.

	* SoObjects/SOGo/SOGoAclsFolder.m: convert the class to user the
	new acl facilities method from sope-gdl/GCSFolder.m.

	* SoObjects/Contacts/SOGoContactFolders.m ([SOGoContactFolders
	-roleOfUser:uidinContext:context]): new method that returns
	SOGoRole_Assistant when the user is an assistant or a delegate on
	the "personal" ab object. This is so that setting roles on the
	SOGoContactFolders object is not required.

2006-12-14  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* Main/SOGo.m: declare "Freebusy" permissions for the top objects.

	* UI/Contacts/UIxContactsAclsSelection.m: new component specific
	to the handling of the user selection for the acls.

	* SoObjects/SOGo/SOGoPermissions.[hm]: new module that extends the
	values from SoPermissions with ones specific to SOGo.
