@@ -1,5 +1,8 @@
 2006-12-20  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
 
+	* UI/WebServerResources/ContactsUI.js: cleanup, most of the
+	events are initialized from here now instead of in the HTML code.
+
 	* UI/Contacts/UIxContactFoldersView.m ([UIxContactFoldersView
 	-checkRightsAction]): new method similar to the one with the same
 	name in UIxCalMainView.m.
